--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "postcss": "^8.4.38",
     "standard": "^17.1.0",
     "tailwindcss": "^3.4.3",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vitest": "^1.5.2"
   },
   "dependencies": {
     "@vitejs/plugin-react": "4.2.1",
+    "css.gg": "^2.1.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "18.2.0",
